# RTStudy

./: CMakeLists.txt  README.md
execute/: first.cpp  hello_diffuse.cpp  hello_metal.cpp  hello_ray.cpp  hello_sphere.cpp  hello_texture.cpp  hello_world.cpp  sample.cpp  simple_sky_ray.cpp
source/: Ray.hpp  Scene.cpp  Scene.hpp  bvh.h  camera.hpp  geometry.h  importer.cpp  importer.hpp  material.h  ray_generator.h  sampler.hpp  triangle.hpp
temp/: frameBuffer.cpp  frameBuffer.hpp
